Fix desalignment on thumbnails.

--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -514,7 +514,7 @@ header {
   top: 0;
   padding: 20px;
   width: 100%;
-  height: 100%;
+  height: 98%;
   display: none;
 
   h2 {
@@ -1084,7 +1084,6 @@ footer.wrapper-full {
   position: relative;
   z-index: 1;
   float: left;
-  margin-bottom: 0.5rem;
 
   a {
     text-decoration: none;
@@ -1102,6 +1101,7 @@ footer.wrapper-full {
   img {
     max-width: 100%;
     vertical-align: top;
+    margin-bottom: 1.5%;
   }
 
   &:hover .box-hover {
